k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: iot-webinterface
  labels:
    app: iot-webinterface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-webinterface
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iot-webinterface
    spec:
      containers:
        - image: {IMAGE}
          imagePullPolicy: IfNotPresent
          name: iot-webinterface
          ports:
            - containerPort: 1338
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 1338
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
