k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iot-webinterface
  annotations: {}
  labels: {}
spec:
  selector:
    app: iot-webinterface
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 1337
  sessionAffinity: None
  type: ClusterIP
